[package]
name = "binary-tree"
version = "0.1.0"
authors = ["critiqjo <john.ch.fr@gmail.com>"]
description = "Collection of Binary Tree data structures and algorithms"

repository = "https://github.com/critiqjo/binary-tree"
keywords = ["binary", "counting", "count", "tree"]
license = "MIT/Apache-2.0"

[dependencies]
clippy = {version = "^0.0", optional = true}
quickcheck = {version = "^0.2", optional = true}

[dev-dependencies]
rand = "^0.3"
quickcheck_macros = "^0.2"

[features]
default=[]
