[package]
name = "binary-tree"
version = "0.2.0"
authors = ["critiqjo <john.ch.fr@gmail.com>"]
description = "Collection of Binary Tree data structures and algorithms"

repository = "https://github.com/critiqjo/binary-tree"
documentation = "http://critiqjo.github.io/binary-tree/doc/binary_tree/"
keywords = ["binary", "counting", "count", "tree"]
license = "MIT/Apache-2.0"

[dependencies]
quickcheck = {version = "^0.2", optional = true}
quickcheck_macros = {version = "^0.2", optional = true}

[dev-dependencies]
rand = "^0.3"

[features]
default=[]

qc_tests=["quickcheck", "quickcheck_macros"]
